@@ -156,6 +156,11 @@ find/replace and cheat sheet buttons to the top right of the box. [Marshall]
 Character counts in Bulk Edit are now properly updated after using 
 Find/Replace. [Marshall]
 
+=item *
+
+Pulldowns no longer improperly display as 32-items-tall in the story/media 
+profiles. (bug 1178, reported by Alex Howarth) [Marshall]
+
 =back
 
 =head1 VERSION 1.10.1 (2006-03-20)
